--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -125,3 +125,15 @@
 .animate-rocket {
   animation: rocketLaunch 1.5s ease-in-out infinite;
 }
+
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+  appearance: textfield; 
+}
